--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,7 @@ li {
     transform: scale(0.8);
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .main__h1 {
     top: 42px;
     margin: 0;
@@ -150,7 +150,7 @@ li {
     transform: scale(0.8);
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .header__content__logo {
     width: auto;
     margin: auto;
@@ -312,7 +312,7 @@ li {
     margin-left: 0;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .gallery__nav__logo {
     margin: 0px;
   }
@@ -332,7 +332,7 @@ li {
     margin: 0px 20px;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .gallery__main__presentation {
     margin: 0px 10px;
   }
@@ -354,7 +354,7 @@ li {
     font-size: 1.4rem;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .gallery__main__presentation__info__name {
     font-size: 1.2rem;
   }
@@ -367,7 +367,7 @@ li {
     font-size: 0.9rem;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .gallery__main__presentation__info__location {
     font-size: 0.8rem;
   }
@@ -379,7 +379,7 @@ li {
     flex-wrap: wrap;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .gallery__main__presentation__info__tagline {
     font-size: 0.8rem;
     overflow-wrap: normal;
@@ -401,6 +401,13 @@ li {
     border-radius: 100px !important;
   }
 }
+@media screen and (max-width: 800px) {
+  .gallery__main__presentation__img {
+    width: 200px !important;
+    height: 200px !important;
+    border-radius: 100px !important;
+  }
+}
 @media screen and (max-width: 500px) {
   .gallery__main__presentation__img {
     width: 180px !important;
@@ -415,7 +422,7 @@ li {
     border-radius: 90px !important;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .gallery__main__presentation__img {
     width: 100px !important;
     height: 100px !important;
@@ -429,6 +436,7 @@ li {
   margin-bottom: 60px;
   width: 100%;
   height: 100%;
+  margin-top: 20px;
 }
 .gallery__main__gallery__container {
   margin: 15px;
@@ -785,8 +793,7 @@ input {
   justify-content: center;
 }
 .lightbox__modal__container__mediaContainer {
-  width: 1050px;
-  height: 900px;
+  height: 80%;
 }
 @media screen and (max-width: 1200px) {
   .lightbox__modal__container__mediaContainer {
@@ -800,7 +807,7 @@ input {
     height: 350px;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 420px) {
   .lightbox__modal__container__mediaContainer {
     width: 250px;
     height: 250px;
@@ -817,6 +824,9 @@ input {
   .lightbox__modal__container__mediaContainer__media {
     object-fit: cover;
   }
+}
+.lightbox__modal__container__mediaContainer__title {
+  font-size: 1rem;
 }
 
 button {
